# Rstreamdeck

./: Cargo.toml  README.md  flake.nix  load_plugins.sh  plugin.proto  protocol_doc.md  result  rust-toolchain  shell.nix
Rstreamdeck-lib/: Cargo.toml
Rstreamdeck-lib/src/: lib.rs
RstreamdeckPluginLib/: Cargo.toml
RstreamdeckPluginLib/src/: lib.rs
examples/basic_plugin/: Cargo.toml
examples/basic_plugin/src/: main.rs
examples/keyboard_tricks/: Cargo.toml
examples/keyboard_tricks/src/: main.rs
examples/media_control/: Cargo.toml
examples/media_control/src/: main.rs
examples/plugin_test/: Cargo.toml
examples/plugin_test/src/: main.rs
streamdeck-control/: Cargo.toml  default.nix  exampleconfig.toml
streamdeck-control/src/: config.rs  default_buttons.rs  hardware.rs  main.rs  plugin.rs
