# [package] 
# name = "Rstreamdeck"
# version = "0.1.0"
# edition = "2021"
#
[workspace]
members = [
  "streamdeck-control",
  "Rstreamdeck-lib",
  "RstreamdeckPluginLib",
  "./examples/basic_plugin/",
	"./examples/plugin_test",
	"./examples/media_control"
]


[workspace.dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.104"
anyhow = "1.0.71"
image = "0.24.6"
rusttype = "0.9.3"
base64 = "0.21.3"
clap = { version = "4.3.5", features = ["derive"] }
