[package]
name = "RstreamdeckPluginLib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Rstreamdeck-lib = { path = "../Rstreamdeck-lib/" }
anyhow.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
clap.workspace = true
