[package]
name = "Rstreamdeck"
version = "0.0.1-alpha"
author = "dragonblade316"

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
hidapi = "1.2"
rusttype = "0.9.2"
clap.workspace = true
image.workspace = true
serde.workspace = true
streamdeck = "0.7.0"
toml = "0.7.4"
xdg = "2.5.0"
serde_json.workspace = true
base64.workspace = true

Rstreamdeck-lib = { path = "../Rstreamdeck-lib/" }
ctrlc = "3.4.1"
imageproc = "0.23.0"
enigo = "0.1.3"

[[bin]]
name = "Rstreamdeck"
