[package]
name = "keyboard_tricks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
RstreamdeckPluginLib = { path = "../../RstreamdeckPluginLib/" }

enigo = "0.1.3"
simplelog.workspace = true
log.workspace = true

