[package]
name = "plugin_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Rstreamdeck-lib = { path = "../../Rstreamdeck-lib/" }
serde.workspace = true
serde_json.workspace = true
clap.workspace = true

